src/styles/app.css
/* ... */
body {
    overflow-x: hidden;
    color: #3c484e;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
    font-size: 1.5rem;
    line-height: 1.6em;
    font-weight: 400;
    font-style: normal;
    letter-spacing: 0;
    text-rendering: optimizeLegibility;
    background: #fff;

    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    -moz-font-feature-settings: "liga" on;
}

::selection {
    text-shadow: none;
    background: #cbeafb;
}

hr {
    position: relative;
    display: block;
    width: 100%;
    margin: 2.5em 0 3.5em;
    padding: 0;
    height: 1px;
    border: 0;
    border-top: 1px solid #e3e9ed;
}

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

fieldset {
    margin: 0;
    padding: 0;
    border: 0;
}

textarea {
    resize: vertical;
}

p,
ul,
ol,
dl,
blockquote {
    margin: 0 0 1.5em 0;
}

ol,
ul {
    padding-left: 1.3em;
    padding-right: 1.5em;
}

ol ol,
ul ul,
ul ol,
ol ul {
    margin: 0.5em 0 1em;
}

ul {
    list-style: disc;
}

ol {
    list-style: decimal;
}

ul,
ol {
    max-width: 100%;
}

li {
    margin: 0.5em 0;
    padding-left: 0.3em;
    line-height: 1.6em;
}

dt {
    float: left;
    margin: 0 20px 0 0;
    width: 120px;
    font-weight: 500;
    text-align: right;
}

dd {
    margin: 0 0 5px 0;
    text-align: left;
}

blockquote {
    margin: 1.5em 0;
    padding: 0 1.6em 0 1.6em;
    border-left: #cbeafb 0.5em solid;
}

blockquote p {
    margin: 0.8em 0;
    font-size: 1.2em;
    font-weight: 300;
}

blockquote small {
    display: inline-block;
    margin: 0.8em 0 0.8em 1.5em;
    font-size: 0.9em;
    opacity: 0.8;
}
/* Quotation marks */
blockquote small:before {
    content: "\2014 \00A0";
}

blockquote cite {
    font-weight: bold;
}
blockquote cite a {
    font-weight: normal;
}

a {
    color: #26a8ed;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    margin-top: 0;
    color: var(--color-base);
    line-height: 1.15;
    font-weight: 700;
    text-rendering: optimizeLegibility;
}

h1 {
    margin: 0 0 0.5em 0;
    font-size: 4rem;
    font-weight: 700;
}
@media (max-width: 500px) {
    h1 {
        font-size: 2rem;
    }
}

h2 {
    margin: 1.5em 0 0.5em 0;
    font-size: 2rem;
}
@media (max-width: 500px) {
    h2 {
        font-size: 1.8rem;
    }
}

h3 {
    margin: 1.5em 0 0.5em 0;
    font-size: 1.8rem;
    font-weight: 500;
}
@media (max-width: 500px) {
    h3 {
        font-size: 1.7rem;
    }
}

h4 {
    margin: 1.5em 0 0.5em 0;
    font-size: 1.6rem;
    font-weight: 500;
}

h5 {
    margin: 1.5em 0 0.5em 0;
    font-size: 1.4rem;
    font-weight: 500;
}

h6 {
    margin: 1.5em 0 0.5em 0;
    font-size: 1.4rem;
    font-weight: 500;
}

/* Layout
/* ---------------------------------------------------------- */

.viewport {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    min-height: 100vh;
}

.container {
    max-width: 1120px;
    margin: 0 auto;
    padding: 0 4vw;
}

.content {
    margin: 0 auto;
    font-size: 2rem;
    line-height: 1.7em;
}

.content-title {
    font-size: 5rem;
}
@media (max-width: 500px) {
    .content-title {
        font-size: 2.2rem;
    }
    .content {
        font-size: 1.8rem;
    }
}

.content-body {
    font-family: var(--font-serif);
}

.content-body h1,
.content-body h2,
.content-body h3,
.content-body h4,
.content-body h5,
.content-body h6 {
    font-family: var(--font-sans-serif);
}

/* Header
/* ---------------------------------------------------------- */

.site-head {
    padding-top: 20px;
    padding-bottom: 20px;
    color: #fff;
    background: var(--color-base);
}

.site-nav-item {
    display: inline-block;
    padding: 5px 10px;
    color: #fff;
    opacity: 0.7;
}

.site-nav-item:hover {
    text-decoration: none;
    opacity: 1;
}

.site-nav-icon {
    height: 15px;
    margin: -5px 0 0;
}

.site-logo {
    height: 25px;
}

.site-mast {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.site-mast-right {
    display: flex;
    align-items: center;
    margin: 0 -10px 0 20px;
}

.site-banner {
    max-width: 80%;
    margin: 0 auto;
    padding: 10vw 0;
    text-align: center;
}

.site-banner-title {
    margin: 0;
    padding: 0;
    color: #fff;
    font-size: 4rem;
    line-height: 1.3em;
}

.site-banner-desc {
    margin: 5px 0 0 0;
    padding: 0;
    font-size: 2.4rem;
    line-height: 1.3em;
    opacity: 0.7;
}

.site-nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 15px 0 0 0;
}

.site-nav-left {
    margin: 0 20px 0 -10px;
}

.site-nav-right {
    margin: 0 -10px 0 20px;
}

.site-nav-button {
    display: inline-block;
    padding: 5px 10px;
    border: #fff 1px solid;
    color: #fff;
    font-size: 1.3rem;
    line-height: 1em;
    border-radius: var(--radius);
    opacity: 0.7;
}

.site-nav-button:hover {
    text-decoration: none;
}

/* Main
/* ---------------------------------------------------------- */

.site-main {
    padding: 4vw 0;
}

/* Index
/* ---------------------------------------------------------- */

.post-feed {
    display: grid;
    justify-content: space-between;
    grid-gap: 30px;
    grid-template-columns: 1fr 1fr 1fr;
}

@media (max-width: 980px) {
    .post-feed {
        grid-template-columns: 1fr 1fr;
    }
}
@media (max-width: 680px) {
    .post-feed {
        grid-template-columns: 1fr;
    }
}

.post-card {
    color: inherit;
    text-decoration: none;
}

.post-card:hover {
    text-decoration: none;
}

.post-card-tags {
    margin: 0 0 5px 0;
    font-size: 1.4rem;
    line-height: 1.15em;
    color: var(--color-secondary);
}


.post-card-title {
    margin: 0 0 10px 0;
    padding: 0;
}

.post-card-excerpt {
    font-size: 1.6rem;
    line-height: 1.55em;
}
/* ... */

